# blackbox-command-tester

./: .gitignore  blackbox.sublime-project  blackbox.sublime-workspace  blackbox_tester.py  pyproject.toml  readme.MD
bbtests_examples/2_a_faulty_test_that_demonstrates_failure/: config.yaml
bbtests_self_tests/: readme.MD
bbtests_self_tests/0_example_tests_one_fails/: config.yaml  stdout_working.txt
bbtests_self_tests/0a_example_tests_one_fails_due_to_input_output_file_orphan/: config.yaml
bbtests_self_tests/0a_example_tests_one_fails_due_to_input_output_file_orphan__no_create_working_artifacts/: config.yaml
bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch/: config.yaml
bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch0b_example_tests_one_fails_due_to_stdout_mismatch/: config.yaml  stdout.txt
bbtests_self_tests/0b_example_tests_one_fails_due_to_stdout_mismatch__no_create_working_artifacts/: config.yaml
bbtests_self_tests/1_example_tests_clean_function_works/: config.yaml  stdout.txt
bbtests_self_tests/2_empty_input_output_folders_pass/: config.yaml
bbtests_self_tests/3_missing_input_folder_fails/: config.yaml  stdout.txt
bbtests_self_tests/4_missing_output_folder_fails/: config.yaml  stdout.txt
bbtests_self_tests/4_missing_output_folder_is_ok_if_stdout.txt_given/: config.yaml  stdout.txt
dir_comparison/: conftest.py  dir_comparison.py  fake_file_system.py
subprocess_spike/: testy__driver.py  testy_no_input_ret_0.py  testy_no_input_ret_1.py  testy_take_input_ret_0.py  testy_take_input_ret_1.py
(+19 files in other folders)
