[tool.poetry]
name = "blackbox-command-tester"
version = "0.1.0"
description = ""
authors = ["Alex Hunsley <alex.hunsley@gmail.com>"]
readme = "README.md"
packages = [{include = "blackbox_command_tester"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
pyyaml = "^6.0"
pyfakefs = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
